--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,6 @@ applications:
   path: target/Chatbot-0.0.1.war
   buildpack: liberty-for-java
   env:
+    JVM: openjdk
     CONVERSATION_WORKSPACE_ID: 6d499243-66f4-4667-a98c-9ab34108982f
     CAR_SERVICE_HOST: IOTCar-yunjiez.mybluemix.net
